--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,3 +214,21 @@ div div div ul li {
     }    
     
 }
+
+#whatsapp {
+    position: fixed;
+    bottom: 20px;
+    right:20px;
+ }
+
+ svg {
+    width: 80px;
+    filter: drop-shadow(0 1px 4px rgba(0,0,0,.4));
+ }
+
+ circle {
+    fill: #25d366;
+ }
+ path {
+    fill: #fff;
+ }
